--- a/products/essential-oils.html
+++ b/products/essential-oils.html
@@ -481,99 +481,114 @@
                 <p class="text-gray-600 max-w-3xl mx-auto">Our streamlined export process ensures quality and satisfaction at every step:</p>
             </div>
 
-            <div class="max-w-3xl mx-auto mb-12">
-                <div class="relative">
-                    <!-- Timeline line -->
-                    <div class="absolute left-1/2 transform -translate-x-1/2 h-full w-0.5 bg-gray-200"></div>
-                    
-                    <!-- Steps -->
-                    <div class="space-y-8">
+            <div class="flex flex-col lg:flex-row gap-12">
+                <!-- Gallery Section -->
+                <div class="lg:w-1/2">
+                    <div class="grid grid-cols-2 gap-4">
+                        <div class="col-span-2">
+                            <img src="../assets/images/container-shipment-indonesia.jpg" alt="Export Container Tea Indonesia" class="w-full h-64 object-cover rounded-lg shadow-lg">
+                        </div>
+                        <div>
+                            <img src="../assets/images/nutmeg-tree.jpg" alt="Nutmeg Tree" class="w-full h-48 object-cover rounded-lg shadow-lg">
+                        </div>
+                        <div>
+                            <img src="../assets/images/patchouli-plant.jpg" alt="Patchouli Plant" class="w-full h-48 object-cover rounded-lg shadow-lg">
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Timeline Section -->
+                <div class="lg:w-1/2">
+                    <div class="space-y-8 relative">
+                        <!-- Vertical Line -->
+                        <div class="absolute left-6 top-0 bottom-0 w-0.5 bg-primary/20"></div>
+                        
                         <!-- Step 1 -->
-                        <div class="relative flex items-center">
-                            <div class="absolute left-1/2 transform -translate-x-1/2 w-8 h-8 bg-primary rounded-full flex items-center justify-center text-white z-10">
-                                <i class="fas fa-envelope text-sm"></i>
+                        <div class="flex items-start relative">
+                            <div class="w-12 h-12 bg-primary rounded-full flex items-center justify-center text-white mr-4 flex-shrink-0">
+                                <i class="fas fa-envelope text-lg"></i>
                             </div>
-                            <div class="ml-auto w-5/12 pl-6">
+                            <div>
                                 <h3 class="text-lg font-medium mb-1">Initial Inquiry</h3>
                                 <p class="text-gray-600 text-sm mb-2">Send us your product requirements and specifications</p>
-                                <a href="https://wa.me/6281212560026?text=Hello%20TropicaFarm%2C%20I%20would%20like%20to%20discuss%20tea%20products" target="_blank" class="inline-flex items-center text-primary hover:text-accent text-sm font-medium">
+                                <a href="https://wa.me/6281212560026?text=Hello%20TropicaFarm%2C%20I%20would%20like%20to%20discuss%20essential%20oils" target="_blank" class="inline-flex items-center text-primary hover:text-accent text-sm font-medium">
                                     <i class="fab fa-whatsapp mr-1"></i> Send Inquiry
                                 </a>
                             </div>
                         </div>
 
                         <!-- Step 2 -->
-                        <div class="relative flex items-center">
-                            <div class="absolute left-1/2 transform -translate-x-1/2 w-8 h-8 bg-primary rounded-full flex items-center justify-center text-white z-10">
-                                <i class="fas fa-file-invoice-dollar text-sm"></i>
+                        <div class="flex items-start relative">
+                            <div class="w-12 h-12 bg-primary rounded-full flex items-center justify-center text-white mr-4 flex-shrink-0">
+                                <i class="fas fa-file-invoice-dollar text-lg"></i>
                             </div>
-                            <div class="mr-auto w-5/12 pr-6 text-right">
+                            <div>
                                 <h3 class="text-lg font-medium mb-1">Quotation</h3>
                                 <p class="text-gray-600 text-sm">We provide detailed quotation including FOB price, MOQ, and payment terms</p>
                             </div>
                         </div>
 
                         <!-- Step 3 -->
-                        <div class="relative flex items-center">
-                            <div class="absolute left-1/2 transform -translate-x-1/2 w-8 h-8 bg-primary rounded-full flex items-center justify-center text-white z-10">
-                                <i class="fas fa-file-contract text-sm"></i>
+                        <div class="flex items-start relative">
+                            <div class="w-12 h-12 bg-primary rounded-full flex items-center justify-center text-white mr-4 flex-shrink-0">
+                                <i class="fas fa-file-contract text-lg"></i>
                             </div>
-                            <div class="ml-auto w-5/12 pl-6">
+                            <div>
                                 <h3 class="text-lg font-medium mb-1">Proforma Invoice</h3>
                                 <p class="text-gray-600 text-sm">Upon agreement, we issue a Proforma Invoice for your review and approval</p>
                             </div>
                         </div>
 
                         <!-- Step 4 -->
-                        <div class="relative flex items-center">
-                            <div class="absolute left-1/2 transform -translate-x-1/2 w-8 h-8 bg-primary rounded-full flex items-center justify-center text-white z-10">
-                                <i class="fas fa-money-bill-wave text-sm"></i>
+                        <div class="flex items-start relative">
+                            <div class="w-12 h-12 bg-primary rounded-full flex items-center justify-center text-white mr-4 flex-shrink-0">
+                                <i class="fas fa-money-bill-wave text-lg"></i>
                             </div>
-                            <div class="mr-auto w-5/12 pr-6 text-right">
+                            <div>
                                 <h3 class="text-lg font-medium mb-1">Payment</h3>
                                 <p class="text-gray-600 text-sm">Payment is made according to agreed terms (T/T, L/C, etc.)</p>
                             </div>
                         </div>
 
                         <!-- Step 5 -->
-                        <div class="relative flex items-center">
-                            <div class="absolute left-1/2 transform -translate-x-1/2 w-8 h-8 bg-primary rounded-full flex items-center justify-center text-white z-10">
-                                <i class="fas fa-industry text-sm"></i>
+                        <div class="flex items-start relative">
+                            <div class="w-12 h-12 bg-primary rounded-full flex items-center justify-center text-white mr-4 flex-shrink-0">
+                                <i class="fas fa-industry text-lg"></i>
                             </div>
-                            <div class="ml-auto w-5/12 pl-6">
+                            <div>
                                 <h3 class="text-lg font-medium mb-1">Production</h3>
                                 <p class="text-gray-600 text-sm">We begin production after payment confirmation</p>
                             </div>
                         </div>
 
                         <!-- Step 6 -->
-                        <div class="relative flex items-center">
-                            <div class="absolute left-1/2 transform -translate-x-1/2 w-8 h-8 bg-primary rounded-full flex items-center justify-center text-white z-10">
-                                <i class="fas fa-clipboard-check text-sm"></i>
+                        <div class="flex items-start relative">
+                            <div class="w-12 h-12 bg-primary rounded-full flex items-center justify-center text-white mr-4 flex-shrink-0">
+                                <i class="fas fa-clipboard-check text-lg"></i>
                             </div>
-                            <div class="mr-auto w-5/12 pr-6 text-right">
+                            <div>
                                 <h3 class="text-lg font-medium mb-1">Quality Control</h3>
                                 <p class="text-gray-600 text-sm">Products undergo strict quality control before shipping</p>
                             </div>
                         </div>
 
                         <!-- Step 7 -->
-                        <div class="relative flex items-center">
-                            <div class="absolute left-1/2 transform -translate-x-1/2 w-8 h-8 bg-primary rounded-full flex items-center justify-center text-white z-10">
-                                <i class="fas fa-ship text-sm"></i>
+                        <div class="flex items-start relative">
+                            <div class="w-12 h-12 bg-primary rounded-full flex items-center justify-center text-white mr-4 flex-shrink-0">
+                                <i class="fas fa-ship text-lg"></i>
                             </div>
-                            <div class="ml-auto w-5/12 pl-6">
+                            <div>
                                 <h3 class="text-lg font-medium mb-1">Shipping</h3>
                                 <p class="text-gray-600 text-sm">Products are shipped with all necessary export documentation</p>
                             </div>
                         </div>
 
                         <!-- Step 8 -->
-                        <div class="relative flex items-center">
-                            <div class="absolute left-1/2 transform -translate-x-1/2 w-8 h-8 bg-primary rounded-full flex items-center justify-center text-white z-10">
-                                <i class="fas fa-box-open text-sm"></i>
+                        <div class="flex items-start relative">
+                            <div class="w-12 h-12 bg-primary rounded-full flex items-center justify-center text-white mr-4 flex-shrink-0">
+                                <i class="fas fa-box-open text-lg"></i>
                             </div>
-                            <div class="mr-auto w-5/12 pr-6 text-right">
+                            <div>
                                 <h3 class="text-lg font-medium mb-1">Delivery</h3>
                                 <p class="text-gray-600 text-sm">Products arrive at your designated port or warehouse</p>
                             </div>
@@ -582,7 +597,7 @@
                 </div>
             </div>
 
-            <div class="text-center">
+            <div class="text-center mt-12">
                 <a href="mailto:info@tropicafarm.com" class="bg-primary hover:bg-accent text-white px-6 py-2 rounded-lg transition duration-300 inline-flex items-center">
                     <i class="fas fa-envelope text-lg mr-2"></i> Start Your Order
                 </a>
