--- a/products/tea.html
+++ b/products/tea.html
@@ -538,7 +538,7 @@
 
                         <!-- Step 3 -->
                         <div class="flex items-start relative">
-                            <div class="w-12 h-12 bg-primary/60 rounded-full flex items-center justify-center text-white mr-4 flex-shrink-0">
+                            <div class="w-12 h-12 bg-primary rounded-full flex items-center justify-center text-white mr-4 flex-shrink-0">
                                 <i class="fas fa-box-open text-lg"></i>
                             </div>
                             <div>
@@ -552,7 +552,7 @@
 
                         <!-- Step 4 -->
                         <div class="flex items-start relative">
-                            <div class="w-12 h-12 bg-primary/60 rounded-full flex items-center justify-center text-white mr-4 flex-shrink-0">
+                            <div class="w-12 h-12 bg-primary rounded-full flex items-center justify-center text-white mr-4 flex-shrink-0">
                                 <i class="fas fa-check-circle text-lg"></i>
                             </div>
                             <div>
