--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="vercel" content="toolbar=off">
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-    <link rel="manifest" href="assets/favicon/site.webmanifest">
-    <link rel="mask-icon" href="assets/favicon/safari-pinned-tab.svg" color="#2c7744">
-    <link rel="shortcut icon" href="assets/favicon/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/assets/favicon/site.webmanifest">
+    <link rel="mask-icon" href="/assets/favicon/safari-pinned-tab.svg" color="#2c7744">
+    <link rel="shortcut icon" href="/assets/favicon/favicon.ico">
     <meta name="msapplication-TileColor" content="#2c7744">
-    <meta name="msapplication-config" content="assets/favicon/browserconfig.xml">
+    <meta name="msapplication-config" content="/assets/favicon/browserconfig.xml">
     <meta name="theme-color" content="#2c7744">
     
     <!-- Primary Meta Tags -->
@@ -78,7 +78,7 @@
         html { scroll-behavior: smooth; }
         .hero { 
             background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), 
-                        url('assets/images/java-tea-harvest.jpg') center/cover no-repeat; 
+                        url('/assets/images/java-tea-harvest.jpg') center/cover no-repeat; 
         }
         .floating-cta { 
             position: fixed; 
@@ -88,7 +88,7 @@
         }
         .statistics-bg {
             background: linear-gradient(rgba(44, 119, 68, 0.9), rgba(26, 92, 48, 0.9)), 
-                        url('assets/images/java-tea-harvest.jpg') center/cover no-repeat;
+                        url('/assets/images/java-tea-harvest.jpg') center/cover no-repeat;
         }
         .product-img {
             height: 250px;
@@ -239,7 +239,7 @@
             <div class="flex flex-col md:flex-row items-stretch gap-16">
                 <div class="md:w-1/2">
                     <div class="relative h-[480px]">
-                        <img src="assets/images/tea-plantation.jpg" alt="Lush green tea plantation in Indonesia showing rows of tea plants on hillside" class="w-full h-full object-cover rounded-2xl shadow-xl" loading="lazy">
+                        <img src="/assets/images/tea-plantation.jpg" alt="Lush green tea plantation in Indonesia showing rows of tea plants on hillside" class="w-full h-full object-cover rounded-2xl shadow-xl" loading="lazy">
                         <div class="absolute -bottom-6 -right-6 bg-primary text-white p-8 rounded-2xl shadow-xl hidden md:block rotate-3 hover:rotate-0 transition-transform duration-300">
                             <p class="text-4xl font-bold">20+</p>
                             <p class="text-sm">Years of Experience</p>
@@ -323,7 +323,7 @@
                 <div class="bg-white rounded-2xl shadow-lg overflow-hidden product-card transform transition hover:shadow-2xl">
                     <div class="overflow-hidden h-80">
                         <a href="/products/tea.html">
-                            <img src="assets/images/black-tea.jpg" alt="Premium Indonesian tea products including black and green tea varieties" class="w-full h-full object-cover" loading="lazy">
+                            <img src="/assets/images/black-tea.jpg" alt="Premium Indonesian tea products including black and green tea varieties" class="w-full h-full object-cover" loading="lazy">
                         </a>
                     </div>
                     <div class="p-8">
@@ -366,7 +366,7 @@
                 <div class="bg-white rounded-2xl shadow-lg overflow-hidden product-card transform transition hover:shadow-2xl">
                     <div class="overflow-hidden h-80">
                         <a href="/products/essential-oils.html">
-                            <img src="assets/images/nutmeg-oil.jpg" alt="Premium Indonesian essential oils collection" class="w-full h-full object-cover" loading="lazy">
+                            <img src="/assets/images/nutmeg-oil.jpg" alt="Premium Indonesian essential oils collection" class="w-full h-full object-cover" loading="lazy">
                         </a>
                     </div>
                     <div class="p-8">
