--- a/products/essential-oils.html
+++ b/products/essential-oils.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="vercel" content="toolbar=off">
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="../assets/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../assets/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../assets/favicon/favicon-16x16.png">
-    <link rel="manifest" href="../assets/favicon/site.webmanifest">
-    <link rel="mask-icon" href="../assets/favicon/safari-pinned-tab.svg" color="#2c7744">
-    <link rel="shortcut icon" href="../assets/favicon/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/assets/favicon/site.webmanifest">
+    <link rel="mask-icon" href="/assets/favicon/safari-pinned-tab.svg" color="#2c7744">
+    <link rel="shortcut icon" href="/assets/favicon/favicon.ico">
     <meta name="msapplication-TileColor" content="#2c7744">
-    <meta name="msapplication-config" content="../assets/favicon/browserconfig.xml">
+    <meta name="msapplication-config" content="/assets/favicon/browserconfig.xml">
     <meta name="theme-color" content="#2c7744">
     
     <!-- Primary Meta Tags -->
@@ -260,7 +260,7 @@
     <!-- Hero Section -->
     <section class="hero-oils flex items-center text-white pt-20">
         <video autoplay muted loop playsinline>
-            <source src="../assets/videos/oil-distillation.mp4" type="video/mp4">
+            <source src="/assets/videos/oil-distillation.mp4" type="video/mp4">
         </video>
         <div class="container mx-auto px-6 py-12">
             <div class="max-w-3xl">
@@ -341,9 +341,9 @@
 
                 <!-- Visual Showcase -->
                 <div class="grid md:grid-cols-3 gap-6">
-                    <img src="../assets/images/nutmeg-tree.jpg" alt="Nutmeg Tree" class="rounded-xl shadow-lg h-48 w-full object-cover">
-                    <img src="../assets/images/patchouli-plant.jpg" alt="Patchouli Plant" class="rounded-xl shadow-lg h-48 w-full object-cover">
-                    <img src="../assets/images/refining-machine.jpeg" alt="Refining Machine" class="rounded-xl shadow-lg h-48 w-full object-cover">
+                    <img src="/assets/images/nutmeg-tree.jpg" alt="Nutmeg Tree" class="rounded-xl shadow-lg h-48 w-full object-cover">
+                    <img src="/assets/images/patchouli-plant.jpg" alt="Patchouli Plant" class="rounded-xl shadow-lg h-48 w-full object-cover">
+                    <img src="/assets/images/refining-machine.jpeg" alt="Refining Machine" class="rounded-xl shadow-lg h-48 w-full object-cover">
                 </div>
             </div>
         </div>
@@ -358,10 +358,10 @@
                     <div class="swiper product-swiper rounded-2xl overflow-hidden shadow-lg">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
-                                <img src="../assets/images/nutmeg-oil-display.jpg" alt="Premium Indonesian Nutmeg Oil - Main View" class="w-full h-[500px] object-cover">
+                                <img src="/assets/images/nutmeg-oil-display.jpg" alt="Premium Indonesian Nutmeg Oil - Main View" class="w-full h-[500px] object-cover">
                             </div>
                             <div class="swiper-slide">
-                                <img src="../assets/images/nutmeg-close-up.jpg" alt="Nutmeg Close Up" class="w-full h-[500px] object-cover">
+                                <img src="/assets/images/nutmeg-close-up.jpg" alt="Nutmeg Close Up" class="w-full h-[500px] object-cover">
                             </div>
                         </div>
                         <div class="swiper-button-next"></div>
@@ -458,10 +458,10 @@
                     <div class="swiper product-swiper rounded-2xl overflow-hidden shadow-lg">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
-                                <img src="../assets/images/patchouli-oil-display.jpg" alt="Premium Indonesian Patchouli Oil - Main View" class="w-full h-[500px] object-cover">
+                                <img src="/assets/images/patchouli-oil-display.jpg" alt="Premium Indonesian Patchouli Oil - Main View" class="w-full h-[500px] object-cover">
                             </div>
                             <div class="swiper-slide">
-                                <img src="../assets/images/patchouli-plant-close-up.jpg" alt="Patchouli Plantation" class="w-full h-[500px] object-cover">
+                                <img src="/assets/images/patchouli-plant-close-up.jpg" alt="Patchouli Plantation" class="w-full h-[500px] object-cover">
                             </div>
                         </div>
                         <div class="swiper-button-next"></div>
@@ -486,13 +486,13 @@
                 <div class="lg:w-1/2">
                     <div class="grid grid-cols-2 gap-4">
                         <div class="col-span-2">
-                            <img src="../assets/images/container-shipment-indonesia.jpg" alt="Export Container Tea Indonesia" class="w-full h-64 object-cover rounded-lg shadow-lg">
+                            <img src="/assets/images/container-shipment-indonesia.jpg" alt="Export Container Tea Indonesia" class="w-full h-64 object-cover rounded-lg shadow-lg">
                         </div>
                         <div>
-                            <img src="../assets/images/nutmeg-tree.jpg" alt="Nutmeg Tree" class="w-full h-48 object-cover rounded-lg shadow-lg">
+                            <img src="/assets/images/nutmeg-tree.jpg" alt="Nutmeg Tree" class="w-full h-48 object-cover rounded-lg shadow-lg">
                         </div>
                         <div>
-                            <img src="../assets/images/patchouli-plant.jpg" alt="Patchouli Plant" class="w-full h-48 object-cover rounded-lg shadow-lg">
+                            <img src="/assets/images/patchouli-plant.jpg" alt="Patchouli Plant" class="w-full h-48 object-cover rounded-lg shadow-lg">
                         </div>
                     </div>
                 </div>
@@ -614,11 +614,11 @@
             </div>
 
             <div class="grid grid-cols-2 md:grid-cols-5 gap-8 items-center justify-items-center">
-                <img src="../assets/images/100-pure.png" alt="100% Pure" class="h-24 object-contain grayscale hover:grayscale-0 transition duration-300">
-                <img src="../assets/images/haccp.png" alt="HACCP Certification" class="h-24 object-contain grayscale hover:grayscale-0 transition duration-300">
-                <img src="../assets/images/gmo-stamp.png" alt="GMO Stamp" class="h-24 object-contain grayscale hover:grayscale-0 transition duration-300">
-                <img src="../assets/images/pesticide-free.png" alt="Pesticide Free" class="h-24 object-contain grayscale hover:grayscale-0 transition duration-300">
-                <img src="../assets/images/halal-logo.webp" alt="Halal Stamp" class="h-24 object-contain grayscale hover:grayscale-0 transition duration-300">
+                <img src="/assets/images/100-pure.png" alt="100% Pure" class="h-24 object-contain grayscale hover:grayscale-0 transition duration-300">
+                <img src="/assets/images/haccp.png" alt="HACCP Certification" class="h-24 object-contain grayscale hover:grayscale-0 transition duration-300">
+                <img src="/assets/images/gmo-stamp.png" alt="GMO Stamp" class="h-24 object-contain grayscale hover:grayscale-0 transition duration-300">
+                <img src="/assets/images/pesticide-free.png" alt="Pesticide Free" class="h-24 object-contain grayscale hover:grayscale-0 transition duration-300">
+                <img src="/assets/images/halal-logo.webp" alt="Halal Stamp" class="h-24 object-contain grayscale hover:grayscale-0 transition duration-300">
             </div>
         </div>
     </section>
