--- a/products/tea.html
+++ b/products/tea.html
@@ -6,14 +6,14 @@
     <meta name="vercel" content="toolbar=off">
     
     <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="../assets/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../assets/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../assets/favicon/favicon-16x16.png">
-    <link rel="manifest" href="../assets/favicon/site.webmanifest">
-    <link rel="mask-icon" href="../assets/favicon/safari-pinned-tab.svg" color="#2c7744">
-    <link rel="shortcut icon" href="../assets/favicon/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/assets/favicon/site.webmanifest">
+    <link rel="mask-icon" href="/assets/favicon/safari-pinned-tab.svg" color="#2c7744">
+    <link rel="shortcut icon" href="/assets/favicon/favicon.ico">
     <meta name="msapplication-TileColor" content="#2c7744">
-    <meta name="msapplication-config" content="../assets/favicon/browserconfig.xml">
+    <meta name="msapplication-config" content="/assets/favicon/browserconfig.xml">
     <meta name="theme-color" content="#2c7744">
     
     <!-- Primary Meta Tags -->
@@ -252,7 +252,7 @@
     <!-- Hero Section -->
     <section class="hero-tea flex items-center text-white pt-20">
         <video autoplay muted loop playsinline>
-            <source src="../assets/videos/tea-harvesting.mp4" type="video/mp4">
+            <source src="/assets/videos/tea-harvesting.mp4" type="video/mp4">
         </video>
         <div class="container mx-auto px-6 py-12">
             <div class="max-w-3xl">
@@ -333,9 +333,9 @@
 
                 <!-- Visual Showcase -->
                 <div class="grid md:grid-cols-3 gap-6">
-                    <img src="../assets/images/tea-harvesting.jpg" alt="Tea Harvesting" class="rounded-xl shadow-lg h-48 w-full object-cover">
-                    <img src="../assets/images/tea-sorting.jpg" alt="Tea Sorting" class="rounded-xl shadow-lg h-48 w-full object-cover">
-                    <img src="../assets/images/black-tea-preview.jpg" alt="Black Tea Preview" class="rounded-xl shadow-lg h-48 w-full object-cover">
+                    <img src="/assets/images/tea-harvesting.jpg" alt="Tea Harvesting" class="rounded-xl shadow-lg h-48 w-full object-cover">
+                    <img src="/assets/images/tea-sorting.jpg" alt="Tea Sorting" class="rounded-xl shadow-lg h-48 w-full object-cover">
+                    <img src="/assets/images/black-tea-preview.jpg" alt="Black Tea Preview" class="rounded-xl shadow-lg h-48 w-full object-cover">
                 </div>
             </div>
         </div>
@@ -350,16 +350,16 @@
                     <div class="swiper product-swiper rounded-2xl overflow-hidden shadow-lg">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
-                                <img src="../assets/images/black-tea-display.jpg" alt="Premium Indonesian Black Tea - Main View" class="w-full h-[500px] object-cover">
+                                <img src="/assets/images/black-tea-display.jpg" alt="Premium Indonesian Black Tea - Main View" class="w-full h-[500px] object-cover">
                             </div>
                             <div class="swiper-slide">
-                                <img src="../assets/images/black-tea-close-up.jpg" alt="Black Tea Close Up" class="w-full h-[500px] object-cover">
+                                <img src="/assets/images/black-tea-close-up.jpg" alt="Black Tea Close Up" class="w-full h-[500px] object-cover">
                             </div>
                             <div class="swiper-slide">
-                                <img src="../assets/images/tea-brewed.jpg" alt="Black Tea Brewed" class="w-full h-[500px] object-cover">
+                                <img src="/assets/images/tea-brewed.jpg" alt="Black Tea Brewed" class="w-full h-[500px] object-cover">
                             </div>
                             <div class="swiper-slide">
-                                <img src="../assets/images/tea-shoots.jpg" alt="Tea Shoots" class="w-full h-[500px] object-cover">
+                                <img src="/assets/images/tea-shoots.jpg" alt="Tea Shoots" class="w-full h-[500px] object-cover">
                             </div>
                         </div>
                         <div class="swiper-button-next"></div>
@@ -456,10 +456,10 @@
                     <div class="swiper product-swiper rounded-2xl overflow-hidden shadow-lg">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
-                                <img src="../assets/images/green-tea.jpg" alt="Premium Indonesian Green Tea - Main View" class="w-full h-[500px] object-cover">
+                                <img src="/assets/images/green-tea.jpg" alt="Premium Indonesian Green Tea - Main View" class="w-full h-[500px] object-cover">
                             </div>
                             <div class="swiper-slide">
-                                <img src="../assets/images/green-tea-roasted.jpg" alt="Green Tea Roasted" class="w-full h-[500px] object-cover">
+                                <img src="/assets/images/green-tea-roasted.jpg" alt="Green Tea Roasted" class="w-full h-[500px] object-cover">
                             </div>
                         </div>
                         <div class="swiper-button-next"></div>
@@ -484,16 +484,16 @@
                 <div class="lg:w-1/2">
                     <div class="grid grid-cols-2 gap-4">
                         <div class="col-span-2">
-                            <img src="../assets/images/export-bulk-tea-indonesia.jpg" alt="Bulk Tea Export from Indonesia" class="w-full h-64 object-cover rounded-lg shadow-lg gallery-image" onclick="openImagePopup(this.src, this.alt)">
+                            <img src="/assets/images/export-bulk-tea-indonesia.jpg" alt="Bulk Tea Export from Indonesia" class="w-full h-64 object-cover rounded-lg shadow-lg gallery-image" onclick="openImagePopup(this.src, this.alt)">
                         </div>
                         <div>
-                            <img src="../assets/images/tea-harvesting.jpg" alt="Tea Harvesting Process" class="w-full h-48 object-cover rounded-lg shadow-lg gallery-image" onclick="openImagePopup(this.src, this.alt)">
+                            <img src="/assets/images/tea-harvesting.jpg" alt="Tea Harvesting Process" class="w-full h-48 object-cover rounded-lg shadow-lg gallery-image" onclick="openImagePopup(this.src, this.alt)">
                         </div>
                         <div>
-                            <img src="../assets/images/tea-sorting.jpg" alt="Tea Sorting Process" class="w-full h-48 object-cover rounded-lg shadow-lg gallery-image" onclick="openImagePopup(this.src, this.alt)">
+                            <img src="/assets/images/tea-sorting.jpg" alt="Tea Sorting Process" class="w-full h-48 object-cover rounded-lg shadow-lg gallery-image" onclick="openImagePopup(this.src, this.alt)">
                         </div>
                         <div class="col-span-2">
-                            <img src="../assets/images/container-shipment-indonesia.jpg" alt="Export Container Tea Indonesia" class="w-full h-64 object-cover rounded-lg shadow-lg gallery-image" onclick="openImagePopup(this.src, this.alt)">
+                            <img src="/assets/images/container-shipment-indonesia.jpg" alt="Export Container Tea Indonesia" class="w-full h-64 object-cover rounded-lg shadow-lg gallery-image" onclick="openImagePopup(this.src, this.alt)">
                         </div>
                     </div>
                 </div>
@@ -618,11 +618,11 @@
             </div>
 
             <div class="grid grid-cols-2 md:grid-cols-5 gap-8 items-center justify-items-center">
-                <img src="../assets/images/100-pure.png" alt="100% Pure" class="h-24 object-contain grayscale hover:grayscale-0 transition duration-300">
-                <img src="../assets/images/haccp.png" alt="HACCP Certification" class="h-24 object-contain grayscale hover:grayscale-0 transition duration-300">
-                <img src="../assets/images/gmo-stamp.png" alt="GMO Stamp" class="h-24 object-contain grayscale hover:grayscale-0 transition duration-300">
-                <img src="../assets/images/pesticide-free.png" alt="Pesticide Free" class="h-24 object-contain grayscale hover:grayscale-0 transition duration-300">
-                <img src="../assets/images/halal-logo.webp" alt="Halal Stamp" class="h-24 object-contain grayscale hover:grayscale-0 transition duration-300">
+                <img src="/assets/images/100-pure.png" alt="100% Pure" class="h-24 object-contain grayscale hover:grayscale-0 transition duration-300">
+                <img src="/assets/images/haccp.png" alt="HACCP Certification" class="h-24 object-contain grayscale hover:grayscale-0 transition duration-300">
+                <img src="/assets/images/gmo-stamp.png" alt="GMO Stamp" class="h-24 object-contain grayscale hover:grayscale-0 transition duration-300">
+                <img src="/assets/images/pesticide-free.png" alt="Pesticide Free" class="h-24 object-contain grayscale hover:grayscale-0 transition duration-300">
+                <img src="/assets/images/halal-logo.webp" alt="Halal Stamp" class="h-24 object-contain grayscale hover:grayscale-0 transition duration-300">
             </div>
         </div>
     </section>
