transparent header menu

--- a/products/tea.html
+++ b/products/tea.html
@@ -18,8 +18,8 @@
     
     <!-- Primary Meta Tags -->
     <title>Leading Indonesian Tea Products - Black Tea & Green Tea | TropicaFarm</title>
-    <meta name="description" content="Discover TropicaFarm's high-quality Indonesian tea products. Black Tea and Green Tea sourced directly from sustainable plantations. Available for global wholesale.">
-    <meta name="keywords" content="Indonesian black tea, premium green tea, wholesale tea supplier, bulk tea export, sustainable tea plantation, Indonesian tea manufacturer, tea exporter Indonesia, black tea wholesale, green tea export">
+    <meta name="description" content="Leading Indonesian tea exporter offering wholesale black tea and green tea. Direct from sustainable Java plantations. Bulk quantities available for global importers. Competitive FOB prices, reliable shipping, custom packaging options. ISO and HACCP certified facility.">
+    <meta name="keywords" content="Indonesian black tea, premium green tea, wholesale tea supplier, bulk tea export, sustainable tea plantation, Indonesian tea manufacturer, tea exporter Indonesia, black tea wholesale, green tea export, Java tea wholesale, Indonesian tea direct supplier, tea import from Indonesia, bulk tea purchase Indonesia, wholesale tea distributor Asia, organic tea export Indonesia, Indonesian tea trade, tea manufacturing Indonesia, tea processing facility Java, tea plantation direct export, Indonesian tea MOQ, tea export price Indonesia">
     <meta name="author" content="TropicaFarm">
     <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
     <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
@@ -703,8 +703,8 @@
     {
       "@context": "https://schema.org",
       "@type": "Product",
-      "name": "Premium Indonesian Tea Products",
-      "description": "High-quality Black Tea and Green Tea sourced from sustainable Indonesian plantations",
+      "name": "Indonesian Export Tea Products",
+      "description": "Premium quality Indonesian tea for export. Available in bulk quantities for international buyers.",
       "brand": {
         "@type": "Brand",
         "name": "TropicaFarm"
@@ -715,64 +715,26 @@
         "availability": "https://schema.org/InStock",
         "seller": {
           "@type": "Organization",
-          "name": "TropicaFarm"
-        }
+          "name": "TropicaFarm",
+          "description": "Leading Indonesian tea exporter since 2004"
+        },
+        "businessFunction": "http://purl.org/goodrelations/v1#Sell",
+        "itemCondition": "https://schema.org/NewCondition",
+        "availableDeliveryMethod": "http://purl.org/goodrelations/v1#DeliveryModeFreight"
       },
-      "category": "Tea Products",
-      "image": "https://tropicafarm.com/assets/images/black-tea-display.jpg",
-      "url": "https://tropicafarm.com/products/tea.html",
-      "sku": "TF-TEA-001",
-      "gtin": "TF-TEA-001",
-      "productionDate": "2024",
-      "award": "Premium Quality Certification",
-      "material": "Tea Leaves",
-      "color": "Black, Green",
+      "keywords": "wholesale tea export, bulk tea supplier Indonesia, Indonesian tea manufacturer, tea export price, Java tea wholesale",
       "countryOfOrigin": {
         "@type": "Country",
         "name": "Indonesia"
       },
-      "hasMerchantReturnPolicy": {
-        "@type": "MerchantReturnPolicy",
-        "applicableCountry": "Worldwide",
-        "returnPolicyCategory": "https://schema.org/MerchantReturnFiniteReturnWindow",
-        "merchantReturnDays": 30,
-        "returnMethod": "https://schema.org/ReturnByMail",
-        "returnFees": "https://schema.org/FreeReturn"
-      },
-      "additionalProperty": [
-        {
-          "@type": "PropertyValue",
-          "name": "Production Capacity",
-          "value": "150 tons/month"
-        },
-        {
-          "@type": "PropertyValue",
-          "name": "Minimum Order",
-          "value": "1 ton"
-        },
-        {
-          "@type": "PropertyValue",
-          "name": "Packaging",
-          "value": "25kg kraft paper bags"
-        },
-        {
-          "@type": "PropertyValue",
-          "name": "Shelf Life",
-          "value": "24 months"
+      "manufacturer": {
+        "@type": "Organization",
+        "name": "TropicaFarm",
+        "address": {
+          "@type": "PostalAddress",
+          "addressCountry": "ID",
+          "addressRegion": "West Java"
         }
-      ],
-      "review": {
-        "@type": "Review",
-        "reviewRating": {
-          "@type": "Rating",
-          "ratingValue": "5",
-          "bestRating": "5"
-        },
-        "author": {
-          "@type": "Person",
-          "name": "Ahmad Surya"
-        },
-        "reviewBody": "TropicaFarm's black tea quality is exceptional. As a wholesale distributor in Semarang, we've been sourcing their products for 3 years and consistently receive positive feedback from our business clients."
       }
     }
     </script>
