--- a/index.html
+++ b/index.html
@@ -103,6 +103,52 @@
         .mobile-menu.active {
             transform: translateX(0);
         }
+        /* Header Styles */
+        #navbar {
+            background: transparent;
+            transition: all 0.3s ease;
+        }
+        #navbar.scrolled {
+            background: rgba(255, 255, 255, 0.95);
+            backdrop-filter: blur(5px);
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+        #navbar .nav-link {
+            color: white;
+            transition: color 0.3s ease;
+        }
+        #navbar.scrolled .nav-link {
+            color: #6b7280;
+        }
+        #navbar.scrolled .nav-link:hover {
+            color: #2c7744;
+        }
+        #navbar .logo-text,
+        #navbar .logo-icon {
+            color: white;
+            transition: color 0.3s ease;
+        }
+        #navbar.scrolled .logo-text,
+        #navbar.scrolled .logo-icon {
+            color: #2c7744;
+        }
+        #navbar .order-button {
+            background: rgba(255, 255, 255, 0.2);
+            backdrop-filter: blur(5px);
+            border: 1px solid rgba(255, 255, 255, 0.3);
+        }
+        #navbar.scrolled .order-button {
+            background: #2c7744;
+            border: none;
+        }
+        /* Mobile Menu Button */
+        #menuButton {
+            color: white;
+            transition: color 0.3s ease;
+        }
+        #navbar.scrolled #menuButton {
+            color: #2c7744;
+        }
     </style>
 
     <!-- Schema.org structured data -->
@@ -201,19 +247,25 @@
     </div>
 
     <!-- Header -->
-    <header class="bg-white shadow-md fixed w-full z-40 transition-all duration-300" id="navbar">
-        <div class="container mx-auto px-4 py-4 flex justify-between items-center">
-            <a href="#" class="flex items-center space-x-2">
-                <i class="fas fa-leaf text-primary text-2xl"></i>
-                <span class="text-2xl font-bold text-primary">TropicaFarm</span>
+    <header id="navbar" class="fixed w-full z-40 transition-all duration-300">
+        <div class="container mx-auto px-4 py-3 flex justify-between items-center">
+            <a href="#" class="flex items-center space-x-2 group">
+                <i class="fas fa-leaf logo-icon text-2xl"></i>
+                <span class="text-2xl font-bold logo-text">TropicaFarm</span>
             </a>
-            <nav class="hidden md:flex space-x-6">
-                <a href="#" class="font-medium hover:text-primary">Home</a>
-                <a href="#about" class="font-medium hover:text-primary">About Us</a>
-                <a href="#products" class="font-medium hover:text-primary">Products</a>
-                <a href="#contact" class="font-medium hover:text-primary">Contact</a>
-            </nav>
-            <button id="menuButton" class="md:hidden text-2xl text-primary"><i class="fas fa-bars"></i></button>
+            <div class="flex items-center space-x-6">
+                <nav class="hidden md:flex space-x-6">
+                    <a href="#" class="nav-link">Home</a>
+                    <a href="#about" class="nav-link">About</a>
+                    <a href="#products" class="nav-link">Products</a>
+                    <a href="#contact" class="nav-link">Contact</a>
+                </nav>
+                <a href="https://wa.me/6281212560026?text=Hello%20TropicaFarm%2C%20I%20am%20interested%20in%20your%20products" target="_blank" class="order-button text-white px-6 py-2 rounded-lg transition duration-300 flex items-center space-x-2">
+                    <i class="fab fa-whatsapp"></i>
+                    <span class="hidden md:inline">Order Now</span>
+                </a>
+                <button id="menuButton" class="md:hidden text-2xl"><i class="fas fa-bars"></i></button>
+            </div>
         </div>
     </header>
 
@@ -684,10 +736,13 @@
         // Navbar scroll effect
         window.addEventListener('scroll', () => {
             const navbar = document.getElementById('navbar');
-            if (window.scrollY > 50) {
-                navbar.classList.add('shadow-lg');
+            const heroSection = document.querySelector('.hero');
+            const heroHeight = heroSection.offsetHeight;
+            
+            if (window.scrollY > heroHeight) {
+                navbar.classList.add('scrolled');
             } else {
-                navbar.classList.remove('shadow-lg');
+                navbar.classList.remove('scrolled');
             }
         });
 
