add snippet for conversion page

--- a/products/tea.html
+++ b/products/tea.html
@@ -10,6 +10,15 @@
 
         gtag('config', 'AW-17055870584');
     </script>
+
+    <!-- Event snippet for Page view conversion page -->
+    <script>
+        gtag('event', 'conversion', {
+            'send_to': 'AW-17055870584/ZZrYCO2Tr8IaEPjc78Q_',
+            'value': 1.0,
+            'currency': 'IDR'
+        });
+    </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="vercel" content="toolbar=off">
