update whatsapp number display

--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@
                                 <i class="fas fa-phone text-primary mt-1 mr-4"></i>
                                 <div>
                                     <h4 class="font-semibold">Phone</h4>
-                                    <p class="text-gray-600"><a href="https://wa.me/6282246632200" target="_blank">+62 812 1256 0026</a></p>
+                                    <p class="text-gray-600"><a href="https://wa.me/6282246632200" target="_blank">+6282246632200</a></p>
                                 </div>
                             </div>
                             <div class="flex items-start">
@@ -702,7 +702,7 @@
                         </p>
                         <p class="flex items-center text-gray-400">
                             <i class="fas fa-phone mr-3"></i>
-                            <span>+62 812 1256 0026</span>
+                            <span>+6282246632200</span>
                         </p>
                         <p class="flex items-center text-gray-400">
                             <i class="fas fa-envelope mr-3"></i>
