--- a/index.html
+++ b/index.html
@@ -132,6 +132,13 @@
         #navbar.scrolled .logo-icon {
             color: #2c7744;
         }
+        #navbar .logo-svg {
+            filter: brightness(0) invert(1);
+            transition: filter 0.3s ease;
+        }
+        #navbar.scrolled .logo-svg {
+            filter: none;
+        }
         #navbar .order-button {
             background: rgba(255, 255, 255, 0.2);
             backdrop-filter: blur(5px);
@@ -250,7 +257,7 @@
     <header id="navbar" class="fixed w-full z-40 transition-all duration-300">
         <div class="container mx-auto px-4 py-3 flex justify-between items-center">
             <a href="#" class="flex items-center space-x-2 group">
-                <i class="fas fa-leaf logo-icon text-2xl"></i>
+                <img src="/assets/images/logo.svg" alt="TropicaFarm Logo" class="h-8 w-8 logo-svg">
                 <span class="text-2xl font-bold logo-text">TropicaFarm</span>
             </a>
             <div class="flex items-center space-x-6">
