--- a/products/tea.html
+++ b/products/tea.html
@@ -491,23 +491,25 @@
     </section>
 
     <!-- Variant Popup -->
-    <div id="variantPopup" class="fixed inset-0 bg-black bg-opacity-75 z-50 hidden flex items-center justify-center">
-        <div class="bg-white rounded-2xl max-w-6xl w-full mx-4 overflow-hidden">
+    <div id="variantPopup" class="fixed inset-0 bg-black bg-opacity-75 z-50 hidden flex items-center justify-center p-4">
+        <div class="bg-white rounded-2xl max-w-6xl w-full overflow-hidden relative">
+            <button id="variantPopupClose" onclick="closeVariantPopup()" class="absolute top-4 right-4 text-gray-500 hover:text-gray-700 z-10 bg-white/80 rounded-full p-2 shadow-md">
+                <i class="fas fa-times text-xl"></i>
+            </button>
             <div class="flex flex-col md:flex-row">
                 <!-- Image Section -->
-                <div class="md:w-1/2 h-[600px]">
+                <div class="md:w-1/2 h-[300px] md:h-[600px]">
                     <img id="variantPopupImage" src="" alt="" class="w-full h-full object-cover">
                 </div>
                 <!-- Content Section -->
-                <div class="md:w-1/2 p-8 flex flex-col">
-                    <div class="flex items-start justify-between mb-6">
-                        <h3 id="variantPopupTitle" class="text-2xl font-bold text-primary"></h3>
-                        <button onclick="closeVariantPopup()" class="text-gray-500 hover:text-gray-700">
-                            <i class="fas fa-times text-xl"></i>
-                        </button>
+                <div class="md:w-1/2 p-6 md:p-8 flex flex-col">
+                    <h3 id="variantPopupTitle" class="text-2xl font-bold text-primary mb-6 mt-2 md:mt-0"></h3>
+                    <p id="variantPopupDescription" class="text-gray-600 mb-6"></p>
+                    <div id="variantPopupCharacteristics" class="mb-8">
+                        <h4 class="font-semibold text-gray-800 mb-3">Characteristics:</h4>
+                        <div id="variantPopupTags" class="flex flex-wrap gap-2"></div>
                     </div>
-                    <p id="variantPopupDescription" class="text-gray-600 mb-8"></p>
-                    <a id="variantPopupWhatsApp" href="#" target="_blank" class="bg-primary hover:bg-accent text-white px-8 py-4 rounded-xl transition duration-300 inline-flex items-center">
+                    <a id="variantPopupWhatsApp" href="#" target="_blank" class="bg-primary hover:bg-accent text-white px-8 py-4 rounded-xl transition duration-300 inline-flex items-center mt-auto">
                         <i class="fab fa-whatsapp text-xl mr-2"></i> Inquire Now
                     </a>
                 </div>
@@ -810,16 +812,39 @@
             const popupTitle = document.getElementById('variantPopupTitle');
             const popupDescription = document.getElementById('variantPopupDescription');
             const popupWhatsApp = document.getElementById('variantPopupWhatsApp');
+            const popupTags = document.getElementById('variantPopupTags');
 
+            // Set basic content
             popupImage.src = imageSrc;
             popupImage.alt = title;
             popupTitle.textContent = title;
             popupDescription.textContent = description;
             popupWhatsApp.href = `https://wa.me/6282246632200?text=Hello%20TropicaFarm%2C%20I%20am%20interested%20in%20Black%20Tea%20${encodeURIComponent(title)}`;
 
+            // Set characteristics based on variant
+            popupTags.innerHTML = ''; // Clear existing tags
+            const characteristics = getCharacteristics(title);
+            characteristics.forEach(char => {
+                const tag = document.createElement('span');
+                tag.className = 'bg-gray-100 px-3 py-1 rounded-full text-sm';
+                tag.textContent = char;
+                popupTags.appendChild(tag);
+            });
+
             popup.classList.remove('hidden');
             popup.classList.add('flex');
             document.body.style.overflow = 'hidden';
+        }
+
+        function getCharacteristics(variant) {
+            const characteristics = {
+                'PF (Pekoe Fannings)': ['Bold, Robust Flavor', 'Floral Sweetness', 'Malty Undertones', 'Astringent'],
+                'OP (Orange Pekoe)': ['Smooth, Full-Bodied Flavor', 'Subtle Floral and Fruity Notes', 'Light Astringency', 'Bright'],
+                'BOP (Broken Orange Pekoe)': ['Bold, Robust Flavor', 'Malty', 'Noticeable Astringency Due To High Tannin Content'],
+                'BOPF (Broken Orange Pekoe Fannings)': ['Bold, Robust Flavor', 'Floral Sweetness', 'Malty Undertones', 'Astringent', 'Aromatic'],
+                'Dust': ['Bold, Robust', 'Malty Notes', 'Astringent', 'Bitter']
+            };
+            return characteristics[variant] || [];
         }
 
         function closeVariantPopup() {
